tests/transpiler/x/java/map_int_key.java
public class Main {
    static java.util.Map<String, Integer> m = java.util.Map.of(1, "a", 2, "b");

    public static void main(String[] args) {
        System.out.println(m[1]);
    }
}
